.xmonad/xmonad.errors

xmonad.hs:85:1: error:
    Could not find module ‘Colors.Dracula’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
85 | import Colors.Dracula
   | ^^^^^^^^^^^^^^^^^^^^^
